--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-    <file source-language="en" datatype="plaintext" original="messages" date="2015-02-03T16:30:00Z" product-name="cart">
+    <file source-language="en" datatype="plaintext" original="messages" date="2020-05-06T13:18:00Z" product-name="cart">
         <header/>
         <body>
 
@@ -275,6 +275,10 @@
             </trans-unit>
             <trans-unit id="tx_cart_domain_model_product.filter.title">
                 <source>Title</source>
+            </trans-unit>
+
+            <trans-unit id="tx_cart.format.date">
+                <source>Y-m-d</source>
             </trans-unit>
 
             <trans-unit id="tx_cart.add_product">
