--- a/Resources/Private/Language/locallang_be.xlf
+++ b/Resources/Private/Language/locallang_be.xlf
@@ -1,23 +1,42 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2018-08-17T10:25:00Z" product-name="cart">
-		<header/>
-		<body>
+    <file source-language="en" datatype="plaintext" original="messages" date="2020-05-06T09:45:00Z" product-name="cart">
+        <header/>
+        <body>
 
-			<trans-unit id="tcarecords-pages-contains.cart_coupons">
-				<source>Cart: Coupons</source>
-			</trans-unit>
-			<trans-unit id="tcarecords-pages-contains.cart_orders">
-				<source>Cart: Orders</source>
-			</trans-unit>
+            <trans-unit id="tcarecords-pages-contains.cart_coupons">
+                <source>Cart: Coupons</source>
+            </trans-unit>
+            <trans-unit id="tcarecords-pages-contains.cart_orders">
+                <source>Cart: Orders</source>
+            </trans-unit>
 
-			<trans-unit id="tx_cart.plugin.cart.title">
-				<source>Cart: Cart</source>
-			</trans-unit>
-			<trans-unit id="tx_cart.plugin.cart.description">
-				<source>shows complete order form</source>
-			</trans-unit>
+            <trans-unit id="tx_cart.plugin.cart.title">
+                <source>Cart: Cart</source>
+            </trans-unit>
+            <trans-unit id="tx_cart.plugin.cart.description">
+                <source>shows complete order form</source>
+            </trans-unit>
 
-		</body>
-	</file>
+            <trans-unit id="widget_group.cart">
+                <source>Cart</source>
+            </trans-unit>
+            <trans-unit id="dashboard.widgets.payment_paid_shipping_open.title">
+                <source>Latest Orders (paid, not shipped)</source>
+            </trans-unit>
+            <trans-unit id="dashboard.widgets.payment_paid_shipping_open.description">
+                <source>List of Paid but not Shipped Orders</source>
+            </trans-unit>
+            <trans-unit id="dashboard.widgets.orders_per_day.chart.dataSet.0">
+                <source>Total Orders</source>
+            </trans-unit>
+            <trans-unit id="dashboard.widgets.orders_per_day.title">
+                <source>Orders per Day</source>
+            </trans-unit>
+            <trans-unit id="dashboard.widgets.orders_per_day.description">
+                <source>Orders per Day</source>
+            </trans-unit>
+
+        </body>
+    </file>
 </xliff>
