--- a/Resources/Private/Language/locallang_be.xlf
+++ b/Resources/Private/Language/locallang_be.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-    <file source-language="en" datatype="plaintext" original="messages" date="2020-05-06T09:45:00Z" product-name="cart">
+    <file source-language="en" datatype="plaintext" original="messages" date="020-11-20T08:10:00Z" product-name="cart">
         <header/>
         <body>
 
@@ -35,6 +35,12 @@
             </trans-unit>
             <trans-unit id="dashboard.widgets.orders_per_day.description">
                 <source>Orders per Day</source>
+            </trans-unit>
+            <trans-unit id="dashboard.widgets.turnover_per_day.title">
+                <source>Turnover per Day</source>
+            </trans-unit>
+            <trans-unit id="dashboard.widgets.turnover_per_day.description">
+                <source>Turnover per Day</source>
             </trans-unit>
 
         </body>
