--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-    <file source-language="en" datatype="plaintext" original="messages" date="2021-02-09T12:22:00Z" product-name="cart">
+    <file source-language="en" datatype="plaintext" original="messages" date="2021-06-10T23:58:00Z" product-name="cart">
         <header/>
         <body>
 
@@ -47,6 +47,12 @@
                 <source>Receiver email addresses (seperated by comma) for email to the Seller</source>
             </trans-unit>
             <trans-unit id="tx_cart.flexform.seller.email_bcc_address">
+                <source>CC email addresses (seperated by comma) for email to the Seller</source>
+            </trans-unit>
+            <trans-unit id="tx_cart.flexform.seller.email_bcc_address.description">
+                <source>The recipients of e-mails sent to one or more e-mail addresses separated by commas and listed in the so-called CC (Carbon Copy) field will receive a copy of the sent e-mail.</source>
+            </trans-unit>
+            <trans-unit id="tx_cart.flexform.seller.email_bcc_address">
                 <source>BCC email addresses (seperated by comma) for email to the Seller</source>
             </trans-unit>
             <trans-unit id="tx_cart.flexform.seller.email_bcc_address.description">
@@ -54,6 +60,12 @@
             </trans-unit>
             <trans-unit id="tx_cart.flexform.buyer.email_from_address">
                 <source>Sender email address for email to the Buyer</source>
+            </trans-unit>
+            <trans-unit id="tx_cart.flexform.buyer.email_cc_address">
+                <source>CC email addresses (seperated by comma) for email to the Buyer</source>
+            </trans-unit>
+            <trans-unit id="tx_cart.flexform.buyer.email_cc_address.description">
+                <source>The recipients of e-mails sent to one or more e-mail addresses separated by commas and listed in the so-called CC (Carbon Copy) field will receive a copy of the sent e-mail.</source>
             </trans-unit>
             <trans-unit id="tx_cart.flexform.buyer.email_bcc_address">
                 <source>BCC email addresses (seperated by comma) for email to the Buyer</source>
